--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@coreui/coreui": "^5.2.0",
     "@coreui/react": "^5.5.0",
     "@tailwindcss/vite": "^4.1.1",
+    "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
