--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@coreui/react": "^5.5.0",
     "@tailwindcss/vite": "^4.1.1",
     "axios": "^1.8.4",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
