--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.3",
+    "gsap": "^3.12.7",
     "lucide-react": "^0.487.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
